# HexGame

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-ci.yml  python-publish.yml
docker/: Dockerfile  create.py  create.sh  requirements.txt
docs/research/: algorithm.md
hexgame/: __main__.py  board.py  cell.py  color.py  game.py  graph.py  player.py  unionfind.py
hexgame-rs/: Cargo.toml
hexgame-rs/src/: main.rs
hexgame-rs/src/game/: board.rs  cell.rs  game.rs  mod.rs
hexgame/doc/research/: algorithm.md
hexgame/examples/: triangle.py
hexgame/src/: board.py  cell.py  color.py  conncomp.py  game.py  graph.py  player.py  unionfind.py
hexgame/tests/: test_board.py  test_conncomp.py
src/: board.py  cell.py  game.py  player.py
tests/: BoardTest.py  context.py  test_board.py
