[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexgame"
version = "0.0.3"
authors = [
  { name="Gianpiero Cea", email="" },
  { name="Edoardo Ghini",email="edoardo.ghini@live.it"}
]
description = "An implementation of the board game Hex"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dinies/HexGame"
"Bug Tracker" = "https://github.com/dinies/HexGame/issues"